--- a/编程/编程语言/csharp/_1数据类型.md
+++ b/编程/编程语言/csharp/_1数据类型.md
@@ -9,7 +9,7 @@
 
 ![float](https://raw.githubusercontent.com/839781960/blog/main/IMAGES/2023/_1%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B/float.png)
 
-![double](https://raw.githubusercontent.com/839781960/blog/main/IMAGES/2023/_1%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B/%0D%0Adouble.png)
+![double](https://raw.githubusercontent.com/839781960/blog/main/IMAGES/2023/_1%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B/double.png)
 
 ![decimal](https://raw.githubusercontent.com/839781960/blog/main/IMAGES/2023/_1%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B/decimal.png)
 
